--- a/app/assets/stylesheets/custom.css.scss.erb
+++ b/app/assets/stylesheets/custom.css.scss.erb
@@ -3,7 +3,8 @@
 
 
 html body  {
-    background: url('norris_bazooka.jpg') no-repeat center center fixed;
+    background: url('<%= asset_path("norris_bazooka.jpg") %>
+') no-repeat center center fixed;
       -webkit-background-size: cover;
       -moz-background-size: cover;
       -o-background-size: cover;
