Added Figaro Gem and Configured API keys

--- a/app/views/chuck/home.html.erb
+++ b/app/views/chuck/home.html.erb
@@ -1,4 +1,4 @@
-
+<meta name="viewport" content="width=300, initial-scale=1">
 <div class="container">
     <h1><strong>Welcome to Chuck Notice.</strong></h1>
   <h4><q>We are changing the world, one roundhouse kick at a time.</q></h4>
